git-annex (10.20251103) UNRELEASED; urgency=medium

  * p2p --pair: Fix to work with external P2P networks.
  * remotedaemon: Avoid crashing when run with --debug.
  * p2phttp: Fix server stall when there are too many concurrent clients.
  * p2phttp: Fix a file descriptor leak caused by a race condition.
  * p2phttp: Added the --lockedfiles option.
  * dropunused: Run the annex.secure-erase-command 
    (or .git/hooks/secure-erase-annex) when deleting
    temp and bad object files.

 -- Joey Hess <id@joeyh.name>  Mon, 03 Nov 2025 14:02:46 -0400

git-annex (10.20251029) upstream; urgency=medium

  * Support ssh remotes with '#' and '?' in the path to the repository,
    the same way git does.
  * assistant: Fix reversion that caused files to be added locked by
    default.

 -- Joey Hess <id@joeyh.name>  Wed, 29 Oct 2025 10:04:43 -0400

git-annex (10.20250929) upstream; urgency=medium

  * enableremote: Allow type= to be provided when it does not change the
    type of the special remote.
  * importfeed: Fix encoding issues parsing feeds when built with OsPath.
  * Fix build with ghc 9.0.2.
  * Remove the Servant build flag; always build with support for
    annex+http urls and git-annex p2phttp.

 -- Joey Hess <id@joeyh.name>  Mon, 29 Sep 2025 11:28:09 -0400

git-annex (10.20250925) upstream; urgency=medium

  * Fix bug that made changes to a special remote sometimes be missed when
    importing a tree from it. After upgrading, any such missed changes
    will be included in the next tree imported from a special remote.
    Fixes reversion introduced in version 10.20230626.
  * Fix crash operating on filenames that are exactly 21 bytes long
    and begin with a utf-8 character.
  * Fix hang that could occur when using git-annex adjust on a branch with
    a number of files greater than annex.queuesize.
  * Fix bug that could cause an invalid utf-8 sequence to be used in a
    temporary filename when the input filename was valid utf-8.